package codinghomework.tortoise_vs_hare;

public class MoveType {
    public static final int SLEEP=0;
    public static final int SLIP=-2;
    public static final int CREEP=1;
    public static final int SMALL_HOP=2;
    public static final int BIG_HOP=5;
}
