package codinghomework.tortoise_vs_hare;

public class RaceRunner {
    static Race race;
    public static void main(String[] args) {
        race=new Race();
        race.run();
    }

}
