@startuml
'https://plantuml.com/class-diagram

'https://java-programming.mooc.fi/part-11/1-class-diagrams

class State {
       public int posPrev;
       public int posPres; //is in range [0,POS_MAX]
}

class Properties {
        String name;
        String symbol;
        int laneNumber;
}

abstract class RunnerAbstract {
    State state;
    Properties props;

    void move();
    boolean isWinner(RunnerAbstract runner)
}

class MoveType {
    SLEEP=0;
    SLIP=-2;
    :
    :
}

RunnerAbstract +-u- State
RunnerAbstract +-u- Properties
RunnerAbstract <|-- Hare
RunnerAbstract <|-- Turtle

MoveType <-d- Turtle
MoveType <-d- Hare

class RaceRunner {
    public static void main()
}

class Race {
    List<RunnerAbstract> runners;
    boolean isRaceOver;
    run()
    printWinner()
}

class RaceEnvironment {
    updateStates(RunnerAbstract runner, int nofSteps)
 }

class Track {
String[][] tracks;

displayTracks()
setPresentPositionInTrack(RunnerAbstract runner)
deletePreviousPositionInTrack(RunnerAbstract runner)

}

RaceRunner --> Race
Race --> RaceEnvironment
RaceEnvironment --> Track

@enduml